# App-Containerization-Docker

./: .dockerignore  .gitignore  235.ipynb  Dockerfile  README.md  docker-commands.md  docker-compose.yaml  docker-workflow.md  init.sql  main.py  misc.txt  pyproject.toml
Source/data_preparation/: data_preparation.ipynb  data_preparation.py
Source/db_functions/: __init__.py  db_functions.py
Source/get_data/: __init__.py  get_data.py
