[tool.poetry]
name = "fintech-loan-modeling"
version = "0.1.0"
description = "Creating a FinTech Loan Model program"
authors = ["repeckadonatas <repeckadonatas@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"
pandas = "^2.2.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
kaggle = "^1.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
